# Small-Test-Projects

./: .clang-format  .gitignore  README.md
C++/: .gitignore  1.py  SFINAE1.cpp  cast1.cpp  exception1.cpp  function-execl.cpp  globalvar1.cpp  readme.md  returnvaluelifetime1.cpp  smartptr1.cpp  temp.cpp  u16string1.cpp  yield-test.cpp
C++/advanced/: CMakeLists.txt  SFINAE2.cpp  concept.cpp  dumpfile.h  template_partial_spec.cpp
C++/basic/: abstract.cpp  decltype1.cpp  globalvar1.cpp  globalvar1.h  operator优先级.cpp
C++/boring_tests/cmake/cmake_test/: CMakeLists.txt  Config.h.in  foo.cpp  test.cxx
C++/boring_tests/cmake/cmake_test/MathFunctions/: CMakeLists.txt  mysqrt.cxx
C++/buildsystem/cmake/VersionBasic/: CMakeLists.txt  main.cpp  productVersion.h.in  readme.md  version.cmake
C++/c++_weekly/: Ep14.cpp  Ep19.cpp  Ep20.cpp  Ep21.cpp  Ep22.cpp  Ep23.cpp  Ep6.cpp  Ep68.cpp  Ep7.cpp  git_add_all.sh  git_add_all_limits.sh  git_add_one.sh
C++/class/: InheriedAndCast.cpp  filedinit1.cpp
C++/cmake/: AddSingleExeFile.cmake  readme.md
C++/cmake_test/: Config.h
C++/cmake_test2/: CMakeLists.txt
C++/following_steps/sylar/: CMakeLists.txt  CMakeSettings.json  readme.md
C++/following_steps/sylar/cmake/: AddExe.cmake
C++/following_steps/sylar/runner/: runner.cc  runner_config.cc  runner_fiber.cc  runner_iomanager.cc  runner_log.cc  runner_scheduler.cc  runner_thread.cc  runner_utils.cc
C++/following_steps/sylar/sylar/: config.cc  config.h  fiber.cc  fiber.h  iomanager.cc  iomanager.h  log.cc  log.h  macro.h  scheduler.cc  scheduler.cpp  scheduler.h  singleton.h  sylar.h  thread.cc  thread.h  timer.cc  timer.h  util.cc  util.h
C++/following_steps/sylar/test/: CMakeLists.txt  ConfigTest.cc  LogTest.cc
C++/folly/: CMakeLists.txt  CMakeSettings.json  chornon1.cpp  fbfuture.cpp  fbvector.cpp  future1.cpp  temp.cpp  trait1.cpp
C++/folly/container/: iterator.cpp
C++/folly/format/: base.cpp
C++/folly/future/: CMakeLists.txt  async_server.cpp  future2.cpp  simple_future.cpp
C++/folly/json/: json1.cpp
C++/folly/vector/: fbvector.cpp
C++/globavar/: c1.cpp  globavar.sln  globavar.vcxproj.filters
C++/header/: ChronoHelper.h  base.h
C++/lib/boost/: CMakeLists.txt  CMakeSettings.json  CmakeLists.txt
C++/lib/boost/algorithm/: CMakeLists.txt  clamp.cpp  equal.cpp  hex.cpp  increasing_decreasing.cpp  itoa.cpp  palindrome.cpp
C++/lib/boost/assignment/: assignment.cpp
C++/lib/boost/beast/: CMakeLists.txt
C++/lib/boost/beast/simple/: CmakeLists.txt  async-sever.cpp  basic-client.cpp
C++/lib/boost/serialization/: CMakeLists.txt  serialization.cpp
C++/lib/fmt/: CMakeLists.txt  basic.cpp  format_to.cpp  json.cpp  num.cpp  range.cpp
C++/lib/folly/: CMakeLists.txt  CMakeSettings.json  demangle.cpp  main.cpp  range1.cpp
C++/lib/folly/Cmake/: FindJemalloc.cmake
C++/lib/folly/conv/: CMakeLists.txt  conv_i2i.cpp  conv_str.cpp  conv_try.cpp
C++/lib/folly/fbstring/: CMakeLists.txt  basic.cpp
C++/lib/folly/format/: CMakeLists.txt  base.cpp
C++/lib/folly/future/: CMakeLists.txt  fbfuture.cpp  future2.cpp
C++/lib/folly/io/: CMakeLists.txt  iobuf.cpp
C++/lib/folly/json/: json1.cpp
C++/lib/folly/logging/: CMakeLists.txt  lib.cpp  main.cpp  readme
C++/lib/folly/synchronized/: CMakeLists.txt  synchronized1.cpp
C++/lib/folly/vector/: CMakeLists.txt  fbvector.cpp  fbvector_custom_alloctor.cpp  small_vector.cpp
C++/lib/google/protobuf/protobuf-rpc-demo/: CMakeLists.txt
C++/lib/hiredis/: CMakeLists.txt  basic.cpp
C++/lib/libgd/: CMakeLists.txt  example.cpp
C++/lib/opengl/: CMakeLists.txt
C++/lib/opengl/glfw/: CMakeLists.txt  basic_shader.cpp  glfw1.cpp  glversion.cpp
C++/lib/range-v3/: CMakeLists.txt  conact.cpp  enumerate.cpp  itoa.cpp
C++/lib/std/: CMakeLists.txt
C++/lib/std/any/: any.cpp
C++/lib/std/array/: array_base.cpp
C++/lib/std/atomic/MemoryOrder/: MemoryOrder.cpp  MemoryOrder.h
C++/lib/std/function/: invoke2.cpp
C++/lib/std/iterator/: iostream.cpp
C++/lib/std/range/: CMakeLists.txt  basic.cpp  filter.cpp  indexandvalue.cpp  itoa.cpp  slice.cpp  split.cpp  typedef.h
C++/lib/std/range/1_init/1_init/: 1_init.sln  1_init.vcxproj  main.cpp
C++/lib/std/regex/: regex.cpp
C++/lib/std/smartptr/: AsReturnAndAsParam.cpp  smartptr1.cpp
C++/lib/std/stream/: ostream.cpp
C++/lib/std/string/: find.cpp  u8string.cpp
C++/lib/std/thread/: yield.cpp
C++/lib/std/thread/mutex/: shared_mutex.cpp
C++/lib/std/tuple/: tuple-structedbinding.cpp
C++/lib/std/typetraits/: common_type.cpp
C++/linux/: CMakeLists.txt
C++/memory_leak_detect/: CmakeLists.txt
C++/network/simple_conact/: CMakeLists.txt  CMakeSettings.json  client.cpp  readme  server.cpp
C++/snipastes/: threadpool.hpp  完美转发.cpp
C++/snipastes/datastructure/: CMakeLists.txt  list.hpp  list_runner.cpp  slist_runner.cpp  unordered_set.hpp  vector.hpp  vector_runner.cpp
C++/thread/: pthread1.cpp
ComputerGraph/OpenGLBasic/: 1_version.cpp  2_triangle.cpp  3_triangle_rgb.cpp  CMakeLists.txt
ComputerGraph/occt_demo/: CMakeLists.txt
Go/gopl/: echo1.go  (+1 more)
ModelTest/: main.cpp
Qt/: ConditionModifier.7z  简单日志记录.cpp
Qt/cmake-playground/cmake-subdir/cmake-subdir/: CMakeLists.txt  main.cpp
Qt/cmake-playground/cmake-subdir/cmake-subdir/gui/: CMakeLists.txt
Qt/cmake-playground/subdir-qrc/: CMakeLists.txt  main.cpp
Qt/cmake-playground/subdir-qrc/gui/: CMakeLists.txt
TableViewWithFilterTest/: TableViewWithFilterTest.pro  defectsortfilterproxymodel.cpp  defectsortfilterproxymodel.h  window.cpp  window.h
TopWindow/: main.cpp
cloud-native/docker/compose/api/: main.py  pyproject.toml
cloud-native/serverless/general-test/: Makefile  entry.py  pyproject.toml  report.txt
cloud-native/serverless/general-test/buildup/: dagger-fail.py  dagger-startup.py  python-devcontainer.py
config/: .alacritty.yml  .tmux.conf  .z4hrc  .zellij.config.yaml  .zshrc  README.md  gitconfig-global-linux.txt  kde-shortcut.kksrc
python/: calculate.py  make.py
rust/axum-websocket/: Cargo.toml
rust/axum-websocket/src/: main.rs  msg.rs
scripts/: runfiles.py
somkeModbus/: somkeModbus.sln
(+629 files in other folders)
