[package]
name = "axum-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5", features = ["ws"]}
serde = {version = "1", features = ["derive"]}
futures = "0.3"
serde_json = "1"
tokio = {version = "1", features = ["full"]}
dashmap = "5"
