[tool.poetry]
name = "general-test"
version = "0.0.1"
description = ""
authors = ["chonlon <lonelycooler.xcl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
anyio = "^4.0.0"
dagger-io = "^0.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
